fix selecting frame visibility when tap/click on inputs

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -76,6 +76,18 @@ button {
   background-color: transparent;
 }
 
+label,
+input {
+  -webkit-user-select: none;
+  /* Safari */
+  -ms-user-select: none;
+  /* IE 10+ и Edge */
+  user-select: none;
+  /* Стандартный синтаксис */
+  -moz-user-select: none;
+  /* Firefox */
+}
+
 button:focus,
 a:focus,
 input:focus {
